--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
     "@types/node": "^18.11.11",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "name": "advent_of_code",
+  "type": "module",
+  "devDependencies": {
+    "bun-types": "^0.6.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
